# FSEI-M_TimeTabler

./: .gitignore  LICENSE  README.md  data.json  pyproject.toml  requirements.txt  state.json
Nsrc/: Def.py  LoadData.py  app.py  curiculum.csv  promos.csv  rooms.csv
src/: Department MI.xlsx  FSEI_Mosta_EDT.xlsx  GUI.py  L3.xlsx  Solver.py  build.py  inputDiags.py  main.py  requirements.txt  resources.py  timetableProject.TTP  ui_window.py
src/Gui_files/: FSEI_Mosta_EDT.xlsx  inputDiags.py  session_add.ui  ui_window.py  window.ui
src/test/: prof_TT.xlsx  result.xlsx
test/: 21C61100  Resources.xlsx  result.xlsx
